common/common.scss
body {
  font-family: "Open Sans", Roboto, sans-serif;
  font-size: 0.95rem;
  font-weight: 400;
  background: #f8f8f8;
}

.topic-list-item:hover {
  background-color: hsla(167, 69%, 37%, 0.122);
}

.tab.active {
  background-color: var(--header_background);
}

.discourse-no-touch .d-header-icons .icon:hover {
  background-color: initial;
}

.drop-down-mode .d-header-icons .active .icon,
.discourse-no-touch .d-header-icons .icon:focus {
  background-color: var(--secondary);
}

.drop-down-mode .d-header-icons .active .d-icon,
.discourse-no-touch .d-header-icons .icon:focus .d-icon {
  fill: var(--primary-medium);
}

.d-header-icons .d-icon {
  fill: var(--secondary);
}

div.menu-links-header button:hover,
div.menu-links-header button:focus {
  background-color: var(--primary-low);
}

